        * If the array is a string, it is a character stream.
          - When no external format is supplied, it defaults to the usual encoding
            and the stream behaves like a string stream.
          - When an external format is supplied, each character in the string
            is interpreted as a single byte and used for that external format.
        * If the array is specialized over integers and EXTERNAL-FORMAT is NIL
          the stream is a binary stream.
        * Otherwise, it is a binary string but READ/WRITE-CHAR may be used on it.
   Reading and writing does not preserve the original word size of the array
   but rather threads the array as a collection of bytes (octets), writing
   sequentially over it. Thus, if you use encodings such as UCS2 and UCS4, make
   sure that you choose the right endianness to match the shape of the array.

 - DELETE-FILE works on empty directories.

 - In DIRECTORY, :RESOLVE-SYMLINKS defaults to T.

 - Added POSIX function (EXT:CHMOD filename mode)

 - ECL's compiler is now less verbose and hides performance notes, as well as
   invocations of the C compiler. This can be modfied by changing the type
   specifier in c:*suppress-compiler-messages*.

 - Hash tables can now be printed readably when *READ-EVAL* is true. This is
   done using two new functions, EXT:HASH-TABLE-CONTENT and
   EXT:HASH-TABLE-FILL.

 - When a compiler macro fails, ECL simply ignores the errors and
   continues. This is more to the spirit of the compiler macros, as explained
   here http://lists.common-lisp.net/pipermail/pro/2011-December/000675.html

 - INLINE declarations now actually cause the function to be inlined. If
   the function is also proclaimed as INLINE, ECL will store a copy of its
   definition for later use _in other files_. Otherwise INLINE declarations
   remain local to the file being processed.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***