@@ -218,7 +218,6 @@ _hash_equalp(int depth, cl_hashkey h, cl_object x)
 #define HASH_TABLE_LOOP(hkey,hvalue,h,HASH_TABLE_LOOP_TEST) {   \
 	cl_index hsize = hashtable->hash.size; \
         cl_index i = h % hsize, j = hsize, k; \
-	struct ecl_hashtable_entry *first_hole = 0; \
 	for (k = 0; k < hsize;  i = (i + 1) % hsize, k++) { \
 		struct ecl_hashtable_entry *e = hashtable->hash.data + i; \
 		cl_object hkey = e->key, hvalue = e->value; \
@@ -261,10 +260,6 @@ _hash_equalp(int depth, cl_hashkey h, cl_object x)
 		e->value = value;					\
 		return hashtable;					\
 	}
-#endif
-
-#ifdef ECL_WEAK_HASH
-#include "weak_hash.d"
 #endif
 
 /*
@@ -470,6 +465,189 @@ _ecl_remhash_pack(cl_object key, cl_object hashtable)
 }
 
 /*
+ * WEAK HASH TABLES
+ */
+#ifndef ECL_WEAK_HASH
+#define copy_entry(e,h) *(e)
+#endif
+
+#ifdef ECL_WEAK_HASH
+static cl_hashkey
+_ecl_hash_key(cl_object h, cl_object o) {
+	switch (h->hash.test) {
+	case htt_eq: return _hash_eq(o);
+	case htt_eql: return _hash_eql(0, o);
+	case htt_equal: return _hash_equal(3, 0, o);
+	case htt_equalp:
+	default: return _hash_equalp(3, 0, o);
+	}
+}
+
+static void *
+normalize_weak_key_entry(struct ecl_hashtable_entry *e) {
+	return (void*)(e->key = e->key->weak.value);
+}
+
+static void *
+normalize_weak_value_entry(struct ecl_hashtable_entry *e) {
+	return (void*)(e->value = e->value->weak.value);
+}
+
+static void *
+normalize_weak_key_and_value_entry(struct ecl_hashtable_entry *e) {
+	if ((e->key = e->key->weak.value) && (e->value = e->value->weak.value))
+		return (void*)e;
+	else
+		return 0;
+}
+
+static struct ecl_hashtable_entry
+copy_entry(struct ecl_hashtable_entry *e, cl_object h)
+{
+	if (e->key == OBJNULL) {
+		return *e;
+	} else {
+		struct ecl_hashtable_entry output = *e;
+		switch (h->hash.weak) {
+		case htt_weak_key:
+			if (GC_call_with_alloc_lock(normalize_weak_key_entry,
+						    &output)) {
+				return output;
+			}
+			break;
+		case htt_weak_value:
+			if (GC_call_with_alloc_lock(normalize_weak_value_entry,
+						    &output)) {
+				return output;
+			}
+			break;
+		case htt_weak_key_and_value:
+			if (GC_call_with_alloc_lock(normalize_weak_key_and_value_entry,
+						    &output)) {
+				return output;
+			}
+			break;
+		case htt_not_weak:
+		default:
+			return output;
+		}
+		h->hash.entries--;
+		output.key = OBJNULL;
+		output.value = Cnil;
+		h->hash.entries--;
+		return *e = output;
+	}
+}
+
+static struct ecl_hashtable_entry *
+_ecl_weak_hash_loop(cl_hashkey h, cl_object key, cl_object hashtable,
+		    struct ecl_hashtable_entry *aux)
+{
+	cl_index hsize = hashtable->hash.size;
+        cl_index i = h % hsize, j = hsize, k;
+	for (k = 0; k < hsize;  i = (i + 1) % hsize, k++) {
+		struct ecl_hashtable_entry *p = hashtable->hash.data + i;
+		struct ecl_hashtable_entry e = copy_entry(p, hashtable);
+		if (e.key == OBJNULL) {
+			if (e.value == OBJNULL) {
+				if (j == hsize) {
+					*aux = e;
+					return p;
+				} else {
+					return hashtable->hash.data + j;
+				}
+			} else {
+				*aux = e;
+				if (j == hsize) {
+					j = i;
+				} else if (j == i) {
+                                        return p;
+				}
+                        }
+			continue;
+		}
+		switch (hashtable->hash.test) {
+		case htt_eq:
+			if (e.key == key) return p;
+		case htt_eql:
+			if (ecl_eql(e.key, key)) return p;
+		case htt_equal:
+			if (ecl_equal(e.key, key)) return p;
+		case htt_equalp:
+			if (ecl_equalp(e.key, key)) return p;
+		}
+	}
+	return hashtable->hash.data + j;
+}
+
+static cl_object
+_ecl_gethash_weak(cl_object key, cl_object hashtable, cl_object def)
+{
+	cl_hashkey h = _ecl_hash_key(hashtable, key);
+	struct ecl_hashtable_entry aux[1];
+	_ecl_weak_hash_loop(h, key, hashtable, aux);
+	if (aux->key != OBJNULL) {
+		return aux->value;
+	} else {
+		return def;
+	}
+}
+
+static cl_object
+_ecl_sethash_weak(cl_object key, cl_object hashtable, cl_object value)
+{
+	cl_hashkey h = _ecl_hash_key(hashtable, key);
+	struct ecl_hashtable_entry aux[1];
+	struct ecl_hashtable_entry *e;
+ AGAIN:
+	e = _ecl_weak_hash_loop(h, key, hashtable, aux);
+	if (aux->key == OBJNULL) {
+		cl_index i = hashtable->hash.entries + 1;
+		if (i >= hashtable->hash.limit) {
+			hashtable = ecl_extend_hashtable(hashtable);
+			goto AGAIN;
+		}
+		hashtable->hash.entries = i;
+		switch (hashtable->hash.weak) {
+		case htt_weak_key:
+			key = si_make_weak_pointer(key);
+			break;
+		case htt_weak_value:
+			value = si_make_weak_pointer(value);
+			break;
+		case htt_weak_key_and_value:
+		default:
+			key = si_make_weak_pointer(key);
+			value = si_make_weak_pointer(value);
+			break;
+		}
+		e->key = key;
+	}
+	e->value = value;
+	return hashtable;
+}
+
+
+static bool
+_ecl_remhash_weak(cl_object key, cl_object hashtable)
+{
+	cl_hashkey h = _ecl_hash_key(hashtable, key);
+	struct ecl_hashtable_entry aux[1];
+	struct ecl_hashtable_entry *e =
+		_ecl_weak_hash_loop(h, key, hashtable, aux);
+	if (aux->key != OBJNULL) {
+		hashtable->hash.entries--;
+		e->key = OBJNULL;
+		e->value = Cnil;
+		return 1;
+	} else {
+		return 0;
+	}
+}
+
+#endif
+
+/*
  * HIGHER LEVEL INTERFACE
  */
 
@@ -504,7 +682,7 @@ ecl_sethash(cl_object key, cl_object hashtable, cl_object value)
 cl_object
 ecl_extend_hashtable(cl_object hashtable)
 {
-	cl_object old, new, key;
+	cl_object old, new;
 	cl_index old_size, new_size, i;
 	cl_object new_size_obj;
 
@@ -513,9 +691,11 @@ ecl_extend_hashtable(cl_object hashtable)
 	/* We do the computation with lisp datatypes, just in case the sizes contain
 	 * weird numbers */
 	if (FIXNUMP(hashtable->hash.rehash_size)) {
-		new_size_obj = ecl_plus(hashtable->hash.rehash_size, MAKE_FIXNUM(old_size));
+		new_size_obj = ecl_plus(hashtable->hash.rehash_size,
+					MAKE_FIXNUM(old_size));
 	} else {
-		new_size_obj = ecl_times(hashtable->hash.rehash_size, MAKE_FIXNUM(old_size));
+		new_size_obj = ecl_times(hashtable->hash.rehash_size,
+					 MAKE_FIXNUM(old_size));
 		new_size_obj = ecl_ceiling1(new_size_obj);
 	}
 	if (!FIXNUMP(new_size_obj)) {
@@ -544,21 +724,48 @@ ecl_extend_hashtable(cl_object hashtable)
 		new->hash.data[i].value = OBJNULL;
 	}
 	for (i = 0;  i < old_size;  i++) {
-		if ((key = old->hash.data[i].key) != OBJNULL) {
-			if (new->hash.test == htt_pack)
-				key = SYMBOL_NAME(old->hash.data[i].value);
-			new = new->hash.set(key, new, old->hash.data[i].value);
+		struct ecl_hashtable_entry e =
+			copy_entry(old->hash.data + i, old);
+		if (e.key != OBJNULL) {
+			new = new->hash.set(new->hash.test == htt_pack?
+					    SYMBOL_NAME(e.value) : e.key,
+					    new, e.value);
 		}
-        }
+	}
         return new;
 }
 
 @(defun make_hash_table (&key (test @'eql')
+			      (weakness Cnil)
 			      (size MAKE_FIXNUM(1024))
                               (rehash_size cl_core.rehash_size)
 			      (rehash_threshold cl_core.rehash_threshold))
 @
-	@(return cl__make_hash_table(test, size, rehash_size, rehash_threshold))
+{
+	cl_object hash = cl__make_hash_table(test, size, rehash_size, rehash_threshold);
+#ifdef ECL_WEAK_HASH
+	if (!Null(weakness)) {
+		if (weakness == @':key') {
+			hash->hash.weak = htt_weak_key;
+		} else if (weakness == @':value') {
+			hash->hash.weak = htt_weak_value;
+		} else if (weakness == @':key-and-value') {
+			hash->hash.weak = htt_weak_key_and_value;
+		} else {
+			FEwrong_type_key_arg(@[make-hash-table],
+					     @[:weakness],
+					     cl_list(5, @'member',
+						     Cnil, @':key', @':value',
+						     @':key-and-value'),
+					     weakness);
+		}
+		hash->hash.get = _ecl_gethash_weak;
+		hash->hash.set = _ecl_sethash_weak;
+		hash->hash.rem = _ecl_remhash_weak;
+	}
+#endif
+	@(return hash)
+}
 @)
 
 static void
@@ -664,6 +871,7 @@ cl__make_hash_table(cl_object test, cl_object size, cl_object rehash_size,
 	 */
 	h = ecl_alloc_object(t_hashtable);
 	h->hash.test = htt;
+	h->hash.weak = htt_not_weak;
 	h->hash.get = get;
 	h->hash.set = set;
 	h->hash.rem = rem;
@@ -685,6 +893,21 @@ cl_object
 cl_hash_table_p(cl_object ht)
 {
 	@(return (ECL_HASH_TABLE_P(ht) ? Ct : Cnil))
+}
+
+cl_object
+si_hash_table_weakness(cl_object ht)
+{
+	cl_object output = Cnil;
+#ifdef ECL_WEAK_HASH
+	switch (ht->hash.weak) {
+	case htt_weak_key: output = @':key'; break;
+	case htt_weak_value: output = @':value'; break;
+	case htt_weak_key_and_value: output = @':key-and-value'; break;
+	case htt_not_weak: default: output = Cnil; break;
+	}
+#endif
+	@(return output)
 }
 
 @(defun gethash (key ht &optional (no_value Cnil))
@@ -777,7 +1000,8 @@ si_hash_table_iterate(cl_narg narg)
 		if (i < 0)
 			i = -1;
 		for (; ++i < ht->hash.size; ) {
-			struct ecl_hashtable_entry e = ht->hash.data[i];
+			struct ecl_hashtable_entry e =
+				copy_entry(ht->hash.data + i, ht);
 			if (e.key != OBJNULL) {
 				cl_object ndx = MAKE_FIXNUM(i);
 				ECL_RPLACA(env, ndx);
