@@ -2213,5 +2213,10 @@ cl_symbols[] = {
 {EXT_ "CHECK-STACK-OVERFLOW", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "ARRAY-BOUNDS-CHECK", EXT_ORDINARY, NULL, -1, OBJNULL},
 
+{KEY_ "VALUE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "KEY-AND-VALUE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "WEAKNESS", KEYWORD, NULL, -1, OBJNULL},
+{EXT_ "HASH-TABLE-WEAKNESS", EXT_ORDINARY, si_hash_table_weakness, 1, OBJNULL},
+
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
